--- a/Web.Statu/Views/ApiV1/UX.cshtml
+++ b/Web.Statu/Views/ApiV1/UX.cshtml
@@ -204,7 +204,7 @@
             <div class="col-sm-9">
                 <b>Razor funkce</b>
 <pre>
-@@Util.LowBox(120,"Lorem ipsum dolor sit  ....")
+@@WebUtil.LowBox(120,"Lorem ipsum dolor sit  ....")
 </pre>
                 <b>HTML s default vyskou 120px</b>
 <pre>
@@ -231,7 +231,7 @@
         <h3>Vertikalni tabs</h3>
         <h4>Razor Code Helper:</h4>
         <pre>    
-        @@Util.VerticalTabs(tabs, results)
+        @@WebUtil.VerticalTabs(tabs, results)
         
         @@helper VerticalTabs(
             IEnumerable&lt;string&gt; tabnames, 
