--- a/Web.Statu/Views/Data/DatasetHomepage.cshtml
+++ b/Web.Statu/Views/Data/DatasetHomepage.cshtml
@@ -139,7 +139,7 @@
 
             }
 
-            @Util.FeedbackModal("Poslat autorovi zprávu", null, "btn btn-primary btn-sm", null,
+            @WebUtil.FeedbackModal("Poslat autorovi zprávu", null, "btn btn-primary btn-sm", null,
                 new string[]{ "Chyba","Chci upozornit na chybu",
             "Stiznost","Chci si stěžovat",
             "Pochvala","Chci vás pochválit",
