--- a/Web.Statu/Views/Home/AnalyzaPrijemcu.cshtml
+++ b/Web.Statu/Views/Home/AnalyzaPrijemcu.cshtml
@@ -259,7 +259,7 @@
 <div style="margin-top:20px"></div>
 <div class="row">
     <div class="col-xs-12">
-        @Util.AddWatchDog(this.User, Model.Query, null, $"Hlídat všechny novinky o {Devmasters.Core.TextUtil.ShortenText(Model.Query, 60, "...")} v celém Hlídači", btnCss: "btn btn-warning btn-sm", prefillWDname: "Novinky o " + Devmasters.Core.TextUtil.ShortenText(Model.Query, 60, "..."))
+        @WebUtil.AddWatchDog(this.User, Model.Query, null, $"Hlídat všechny novinky o {Devmasters.Core.TextUtil.ShortenText(Model.Query, 60, "...")} v celém Hlídači", btnCss: "btn btn-warning btn-sm", prefillWDname: "Novinky o " + Devmasters.Core.TextUtil.ShortenText(Model.Query, 60, "..."))
     </div>
 </div>
 <div style="margin-top:20px"></div>
