--- a/Web.Statu/Views/Home/Detail_Child_vazby.cshtml
+++ b/Web.Statu/Views/Home/Detail_Child_vazby.cshtml
@@ -107,7 +107,7 @@
                                         <p>
                                             <strong><a href="/politik/@p.NameId">@p.FullName()</a></strong>
                                             <div style="padding-left:20px;">
-                                                @Util.RenderVazby(p.VazbyProICO(ss.ico))
+                                                @WebUtil.RenderVazby(p.VazbyProICO(ss.ico))
                                             </div>
                                         </p>
                                     }
