--- a/Web.Statu/Views/Home/OsobaProfil_Vazby.cshtml
+++ b/Web.Statu/Views/Home/OsobaProfil_Vazby.cshtml
@@ -29,9 +29,9 @@
         </p>
 
         <ul class="nav nav-tabs border" role="tablist">
-            <li role="presentation" @Util.IfExists(aktualnost == HlidacStatu.Lib.Data.Relation.AktualnostType.Nedavny, "class=\"active\"")><a href="@Url.Action("Politik", new { id = Model.NameId, aktualnost = HlidacStatu.Lib.Data.Relation.AktualnostType.Nedavny })"><i class="far fa-calendar-check"></i>&nbsp;Nedávno skončené vazby</a></li>
-            <li role="presentation" @Util.IfExists(aktualnost == HlidacStatu.Lib.Data.Relation.AktualnostType.Aktualni, "class=\"active\"")><a href="@Url.Action("Politik", new { id = Model.NameId, aktualnost = HlidacStatu.Lib.Data.Relation.AktualnostType.Aktualni })"><i class="far fa-university"></i>&nbsp;Všechny vazby podle OR</a></li>
-            <li role="presentation" @Util.IfExists(aktualnost == HlidacStatu.Lib.Data.Relation.AktualnostType.Neaktualni, "class=\"active\"")><a href="@Url.Action("Politik", new { id = Model.NameId, aktualnost = HlidacStatu.Lib.Data.Relation.AktualnostType.Neaktualni })"><i class="far fa-history"></i>&nbsp;Všechny i historické vazby</a></li>
+            <li role="presentation" @WebUtil.IfExists(aktualnost == HlidacStatu.Lib.Data.Relation.AktualnostType.Nedavny, "class=\"active\"")><a href="@Url.Action("Politik", new { id = Model.NameId, aktualnost = HlidacStatu.Lib.Data.Relation.AktualnostType.Nedavny })"><i class="far fa-calendar-check"></i>&nbsp;Nedávno skončené vazby</a></li>
+            <li role="presentation" @WebUtil.IfExists(aktualnost == HlidacStatu.Lib.Data.Relation.AktualnostType.Aktualni, "class=\"active\"")><a href="@Url.Action("Politik", new { id = Model.NameId, aktualnost = HlidacStatu.Lib.Data.Relation.AktualnostType.Aktualni })"><i class="far fa-university"></i>&nbsp;Všechny vazby podle OR</a></li>
+            <li role="presentation" @WebUtil.IfExists(aktualnost == HlidacStatu.Lib.Data.Relation.AktualnostType.Neaktualni, "class=\"active\"")><a href="@Url.Action("Politik", new { id = Model.NameId, aktualnost = HlidacStatu.Lib.Data.Relation.AktualnostType.Neaktualni })"><i class="far fa-history"></i>&nbsp;Všechny i historické vazby</a></li>
         </ul>
 
 
@@ -54,8 +54,8 @@
                 <tr>
                     <td>
                         <a href="@(vPerIco.Value.Subject().GetUrl(true))">@vPerIco.Value.Subject().Jmeno</a>
-                        @Util.IfExists(HlidacStatu.Lib.StaticData.FirmySVazbamiNaPolitiky_nedavne_Cache.Get().SoukromeFirmy.ContainsKey(ico), " - soukromá firma")
-                        @Util.IfExists(HlidacStatu.Lib.StaticData.FirmySVazbamiNaPolitiky_nedavne_Cache.Get().StatniFirmy.ContainsKey(ico), " - firma (spolu)vlastněná státem či samosprávou")
+                        @WebUtil.IfExists(HlidacStatu.Lib.StaticData.FirmySVazbamiNaPolitiky_nedavne_Cache.Get().SoukromeFirmy.ContainsKey(ico), " - soukromá firma")
+                        @WebUtil.IfExists(HlidacStatu.Lib.StaticData.FirmySVazbamiNaPolitiky_nedavne_Cache.Get().StatniFirmy.ContainsKey(ico), " - firma (spolu)vlastněná státem či samosprávou")
                     </td>
                     <td>
                         @if (vPerIco.Value.BasicStatPerYear.Summary.Pocet > 0)
@@ -75,7 +75,7 @@
 
                     </td>
                     <td>
-                        @Util.RenderVazby(Model.VazbyProICO(ico))
+                        @WebUtil.RenderVazby(Model.VazbyProICO(ico))
                     </td>
                 </tr>
             }
