--- a/Web.Statu/Views/Home/PridatSe.cshtml
+++ b/Web.Statu/Views/Home/PridatSe.cshtml
@@ -72,50 +72,50 @@
                             <div class="col-xs-12 col-sm-6">
                                 <div class="checkbox">
                                     <label>
-                                        <input @Util.IfExists(Model.TypPrace.Contains("fundraising"), "checked") name="typPrace" type="checkbox" value="marketing"> Fundraising
+                                        <input @WebUtil.IfExists(Model.TypPrace.Contains("fundraising"), "checked") name="typPrace" type="checkbox" value="marketing"> Fundraising
                                     </label>
                                 </div>
                                 <div class="checkbox">
                                     <label>
-                                        <input @Util.IfExists(Model.TypPrace.Contains("investigation"), "checked") name="typPrace" type="checkbox" value="investigace"> Investigace
+                                        <input @WebUtil.IfExists(Model.TypPrace.Contains("investigation"), "checked") name="typPrace" type="checkbox" value="investigace"> Investigace
                                     </label>
                                 </div>
                                 <div class="checkbox">
                                     <label>
-                                        <input @Util.IfExists(Model.TypPrace.Contains("lawyer"), "checked") name="typPrace" type="checkbox" value="lawyer"> Právní služby (správní právo)
+                                        <input @WebUtil.IfExists(Model.TypPrace.Contains("lawyer"), "checked") name="typPrace" type="checkbox" value="lawyer"> Právní služby (správní právo)
                                     </label>
                                 </div>
                                 <div class="checkbox">
                                     <label>
-                                        <input @Util.IfExists(Model.TypPrace.Contains("marketing"), "checked") name="typPrace" type="checkbox" value="marketing"> Marketing, SEO, PR
+                                        <input @WebUtil.IfExists(Model.TypPrace.Contains("marketing"), "checked") name="typPrace" type="checkbox" value="marketing"> Marketing, SEO, PR
                                     </label>
                                 </div>
                                 <div class="checkbox">
                                     <label>
-                                        <input @Util.IfExists(Model.TypPrace.Contains("analyzy"), "checked") name="typPrace" type="checkbox" value="analyzy"> Analýza dat, reporty
+                                        <input @WebUtil.IfExists(Model.TypPrace.Contains("analyzy"), "checked") name="typPrace" type="checkbox" value="analyzy"> Analýza dat, reporty
                                     </label>
                                 </div>
                             </div>
                             <div class="col-xs-12 col-sm-6">
                                 <div class="checkbox">
                                     <label>
-                                        <input @Util.IfExists(Model.TypPrace.Contains("dev"), "checked") name="typPrace" type="checkbox" value="dev"> Programování, dolování, migrace dat
+                                        <input @WebUtil.IfExists(Model.TypPrace.Contains("dev"), "checked") name="typPrace" type="checkbox" value="dev"> Programování, dolování, migrace dat
                                     </label>
                                 </div>
                                 <div class="checkbox">
                                     <label>
-                                        <input @Util.IfExists(Model.TypPrace.Contains("ux"), "checked") name="typPrace" type="checkbox" value="ux"> Grafika, UX
+                                        <input @WebUtil.IfExists(Model.TypPrace.Contains("ux"), "checked") name="typPrace" type="checkbox" value="ux"> Grafika, UX
                                     </label>
                                 </div>
                                 <div class="checkbox">
                                     <label>
-                                        <input @Util.IfExists(Model.TypPrace.Contains("writing"), "checked") name="typPrace" type="checkbox" value="writing"> Redakční práce, Copywriting
+                                        <input @WebUtil.IfExists(Model.TypPrace.Contains("writing"), "checked") name="typPrace" type="checkbox" value="writing"> Redakční práce, Copywriting
                                     </label>
                                 </div>
 
                                 <div class="checkbox">
                                     <label>
-                                        <input @Util.IfExists(Model.TypPrace.Contains("other"), "checked") name="typPrace" type="checkbox" value="other"> Jiné
+                                        <input @WebUtil.IfExists(Model.TypPrace.Contains("other"), "checked") name="typPrace" type="checkbox" value="other"> Jiné
                                     </label>
                                 </div>
                             </div>
