--- a/Web.Statu/Views/Home/Report_Child.cshtml
+++ b/Web.Statu/Views/Home/Report_Child.cshtml
@@ -8,7 +8,7 @@
     Layout = null;
 }
 
-    @Util.AddVisitImg("/report/" + Model.ToString())
+    @WebUtil.AddVisitImg("/report/" + Model.ToString())
 
     @Html.Partial("Reports\\" + (string)ViewBag.NameOfView)
 
