--- a/Web.Statu/Views/Home/Subjekt.cshtml
+++ b/Web.Statu/Views/Home/Subjekt.cshtml
@@ -81,7 +81,7 @@
 
 <div class="dontembed">
 
-    @Util.AddVisitImg("/subjekt/" + Model.ICO)
+    @WebUtil.AddVisitImg("/subjekt/" + Model.ICO)
 
     @if (showEmptyVersion)
         {
