--- a/Web.Statu/Views/Home/SubjektVazby.cshtml
+++ b/Web.Statu/Views/Home/SubjektVazby.cshtml
@@ -85,7 +85,7 @@
         {
             <div>
                 <h4>@vPerIco.FirmaName</h4>
-                @Util.RenderVazby(vPerIco.VazbyPerIco)
+                @WebUtil.RenderVazby(vPerIco.VazbyPerIco)
 
 
             </div>
