--- a/Web.Statu/Views/Home/Subjekt_OtherDB.cshtml
+++ b/Web.Statu/Views/Home/Subjekt_OtherDB.cshtml
@@ -52,7 +52,7 @@
     <h3 id="_dalsi_db">Informace z dalších databází</h3>
 
     <div class="row">
-        @Util.VerticalTabs(tabs, results)
+        @WebUtil.VerticalTabs(tabs, results)
     </div>
 }
 
