--- a/Web.Statu/Views/Home/Subjekt_err_nezname.cshtml
+++ b/Web.Statu/Views/Home/Subjekt_err_nezname.cshtml
@@ -33,7 +33,7 @@
 </p>
 <p>
     Pokud si myslíte, že bychom tuto firmu měli znát, .
-    @Util.FeedbackModal("napište nám prosím podrobnosti").
+    @WebUtil.FeedbackModal("napište nám prosím podrobnosti").
 
 
 </p>
