--- a/Web.Statu/Views/Home/Subjekt_err_spatneICO.cshtml
+++ b/Web.Statu/Views/Home/Subjekt_err_spatneICO.cshtml
@@ -34,7 +34,7 @@
 </p>
 <p>
     Pokud si myslíte, že bychom tuto firmu měli znát či je chyba na naší straně, 
-    @Util.FeedbackModal("napište nám prosím podrobnosti").
+    @WebUtil.FeedbackModal("napište nám prosím podrobnosti").
 
 
 </p>
