--- a/Web.Statu/Views/Home/TextSmlouvy.cshtml
+++ b/Web.Statu/Views/Home/TextSmlouvy.cshtml
@@ -100,7 +100,7 @@
         {
             found = true;
             <h3>
-                @Util.AddBookmark(this.User, Model)
+                @WebUtil.AddBookmark(this.User, Model)
                 Příloha @priloha.nazevSouboru
             </h3>
             <p>
