--- a/Web.Statu/Views/Home/Tmp.cshtml
+++ b/Web.Statu/Views/Home/Tmp.cshtml
@@ -32,7 +32,7 @@
     </div>
 </div>
 
-@Util.DynamicModal("/api/v1/modalclassification/234234")
+@WebUtil.DynamicModal("/api/v1/modalclassification/234234")
 
 
 
