--- a/Web.Statu/Views/Home/Zatmivaci.cshtml
+++ b/Web.Statu/Views/Home/Zatmivaci.cshtml
@@ -560,28 +560,28 @@
             {
                 <p style='color:red;'>
                     <b><span class='glyphicon glyphicon-thumbs-down'></span></b>
-                    @Util.IfExists(zena, "Hlasovala pro zmrzačený zákon jako celek.", "Hlasoval pro zmrzačený zákon jako celek.")
+                    @WebUtil.IfExists(zena, "Hlasovala pro zmrzačený zákon jako celek.", "Hlasoval pro zmrzačený zákon jako celek.")
                 </p>
             }
             @if (hlasProB1)
             {
                 <p style='color:#ff6a00;'>
                     <b><span class='glyphicon glyphicon-thumbs-down'></span></b>
-                    @Util.IfExists(zena, "Hlasovala pro vyjmutí zpod kontroly všech státních podniků bez ohledu na jejich povahu.", "Hlasoval pro vyjmutí zpod kontroly všech státních podniků bez ohledu na jejich povahu.")
+                    @WebUtil.IfExists(zena, "Hlasovala pro vyjmutí zpod kontroly všech státních podniků bez ohledu na jejich povahu.", "Hlasoval pro vyjmutí zpod kontroly všech státních podniků bez ohledu na jejich povahu.")
                 </p>
             }
             @if (hlasProJ9)
             {
                 <p style='color:#ff6a00;'>
                     <b><span class='glyphicon glyphicon-thumbs-down'></span></b>
-                    @Util.IfExists(zena, "Hlasovala pro vyjmutí zpod kontroly všech krajských a měststkých podniků s průmyslovou a obchodní povahou.", "Hlasoval pro vyjmutí zpod kontroly všech krajských a měststkých podniků s průmyslovou a obchodní povahou.")
+                    @WebUtil.IfExists(zena, "Hlasovala pro vyjmutí zpod kontroly všech krajských a měststkých podniků s průmyslovou a obchodní povahou.", "Hlasoval pro vyjmutí zpod kontroly všech krajských a měststkých podniků s průmyslovou a obchodní povahou.")
                 </p>
             }
             @if (odhlaseni)
             {
                 <p style='color:red;'>
                     <b><span class='glyphicon glyphicon-thumbs-down'></span></b>
-                    @Util.IfExists(zena, "Při opakovaném finálním hlasování se záměrně odhlásila jako nepřítomna, aby se snížil počet potřebných hlasů pro projití zákona. Styděla se pro zákon otevřeně hlasovat.", "Při opakovaném finálním hlasování se záměrně odhlásil jako nepřítomen, aby se snížil počet potřebných hlasů pro projití zákona. Styděl se pro zákon otevřeně hlasovat.")
+                    @WebUtil.IfExists(zena, "Při opakovaném finálním hlasování se záměrně odhlásila jako nepřítomna, aby se snížil počet potřebných hlasů pro projití zákona. Styděla se pro zákon otevřeně hlasovat.", "Při opakovaném finálním hlasování se záměrně odhlásil jako nepřítomen, aby se snížil počet potřebných hlasů pro projití zákona. Styděl se pro zákon otevřeně hlasovat.")
                 </p>
             }
             @if (slib)
