--- a/Web.Statu/Views/Manage/FindPerson.cshtml
+++ b/Web.Statu/Views/Manage/FindPerson.cshtml
@@ -85,7 +85,7 @@ else
                                 Události
                             </div>
                             <div class="new-p text-wrap">
-                                @Util.LowBox(80, osoba.Description(true, m => true))
+                                @WebUtil.LowBox(80, osoba.Description(true, m => true))
                             </div>
                         </div>
                     }
