--- a/Web.Statu/Views/Manage/HledejOsoby.cshtml
+++ b/Web.Statu/Views/Manage/HledejOsoby.cshtml
@@ -50,7 +50,7 @@
         <div class="col-xs-4">
     @foreach (var v in vazby)
     {
-        @Util.RenderVazba(v)
+        @WebUtil.RenderVazba(v)
         <br />
     }
         </div>
