--- a/Web.Statu/Views/Manage/Zalozky.cshtml
+++ b/Web.Statu/Views/Manage/Zalozky.cshtml
@@ -46,7 +46,7 @@
 
         <tr>
             <td>
-                @Util.AddBookmark(this.User, true, bm.Name, bm.Url, bm.ItemId, bm.ItemType)
+                @WebUtil.AddBookmark(this.User, true, bm.Name, bm.Url, bm.ItemId, bm.ItemType)
             </td>
             <td>
                 <a href="@bm.Url">
