--- a/Web.Statu/Views/Osoby/Index.cshtml
+++ b/Web.Statu/Views/Osoby/Index.cshtml
@@ -84,7 +84,7 @@
 </div>
 
 
-@Util.FeedbackModal("Poslat opravu či připomínku")
+@WebUtil.FeedbackModal("Poslat opravu či připomínku")
 
 @Html.Partial("~/Views/Home/_PolitikDisclaimer.cshtml", this.ViewData)
 
