--- a/Web.Statu/Views/Sponzori/Strana.cshtml
+++ b/Web.Statu/Views/Sponzori/Strana.cshtml
@@ -101,7 +101,7 @@
 }
     @Html.Action("CachedAction_Child_48H", new { model = model, NameOfView = "Top_Child" })
 
-    @Util.FeedbackModal("Poslat opravu či připomínku")
+    @WebUtil.FeedbackModal("Poslat opravu či připomínku")
 
 
 
