--- a/Web.Statu/Views/Shared/_Layout.cshtml
+++ b/Web.Statu/Views/Shared/_Layout.cshtml
@@ -158,7 +158,7 @@
         ga('create', 'UA-154075-22', 'auto');
         ga('send', 'pageview');
 
-        @Util.RenderSmartLookTrackingCode(false)
+        @WebUtil.RenderSmartLookTrackingCode(false)
 
     </script>
     @RenderSection("scripts", required: false)
@@ -274,7 +274,7 @@
                 <!-- mobile menu items below -->
                 <li class="level2"><a href="/data">Další databáze<sup style="top:0;text-decoration:none;color:#777;">@(HlidacStatu.Lib.Data.External.DataSets.DataSetDB.AllDataSets.Get()?.Count().ToString() ?? "")</sup></a></li>
                 <li class="level2"><a href="/reporty">Analýzy a reporty<sup style="top:0;text-decoration:none;color:#777;">@(PocetReportu)</sup></a></li>
-                <li class="level2"><a @Util.GAClick("ZjistiliJsmeMobile") href="/texty"><b>Zjistili jsme</b></a></li>
+                <li class="level2"><a @WebUtil.GAClick("ZjistiliJsmeMobile") href="/texty"><b>Zjistili jsme</b></a></li>
                 <li class="level2"><a href="https://www.hlidacstatu.cz/texty/series/tipy/" onclick="return trackOutLink(this,'headermobile');">Tipy „Jak používat Hlídače“</a></li>
 
                 <li class="level2">
@@ -314,7 +314,7 @@
                 <ul>
                     <li class=""><a href="/data">Další databáze<sup style="top:0;text-decoration:none;color:yellow;">@(HlidacStatu.Lib.Data.External.DataSets.DataSetDB.AllDataSets.Get()?.Count().ToString() ?? "")</sup></a></li>
                     <li class=""><a href="/reporty">Analýzy a reporty<sup style="top:0;text-decoration:none;color:yellow;">@(PocetReportu)</sup></a></li>
-                    <li class=""><a @Util.GAClick("ZjistiliJsme") href="/texty"><b>Zjistili jsme</b></a></li>
+                    <li class=""><a @WebUtil.GAClick("ZjistiliJsme") href="/texty"><b>Zjistili jsme</b></a></li>
                     <li class=""><a href="https://www.hlidacstatu.cz/texty/series/tipy/" onclick="return trackOutLink(this,'header');">Tipy „Jak používat Hlídače“</a></li>
                 </ul>
                 <ul>
@@ -374,11 +374,11 @@
                     <h1 class="new-title text-left">
                         @if (Model as HlidacStatu.Lib.Data.Bookmark.IBookmarkable == null) //ViewBag.ShowBookmarkUrl == true)
                         {
-                            @Util.AddBookmarkUrl(this.User, ViewBag.Title + " " + ViewBag.SubTitle, Request.Url.AbsoluteUri, "font-size:24px;vertical-align:top;")
+                            @WebUtil.AddBookmarkUrl(this.User, ViewBag.Title + " " + ViewBag.SubTitle, Request.Url.AbsoluteUri, "font-size:24px;vertical-align:top;")
                         }
                         else
                         {
-                            @Util.AddBookmark(this.User, Model)
+                            @WebUtil.AddBookmark(this.User, Model)
                         }
                         @ViewBag.Title
 
