--- a/Web.Statu/Views/Sponzori/Strany.cshtml
+++ b/Web.Statu/Views/Sponzori/Strany.cshtml
@@ -176,7 +176,7 @@
     }
 </div>
 
-@Util.FeedbackModal("Poslat opravu či připomínku")
+@WebUtil.FeedbackModal("Poslat opravu či připomínku")
 
 
 
