--- a/Web.Statu/Views/VZ/TextDokumentu.cshtml
+++ b/Web.Statu/Views/VZ/TextDokumentu.cshtml
@@ -71,7 +71,7 @@ else
     if (!string.IsNullOrEmpty(plainText))
     {
         <h3>
-            @Util.AddBookmark(this.User, Model)
+            @WebUtil.AddBookmark(this.User, Model)
             Příloha @doc.Name
         </h3>
         <p>
