--- a/Web.Statu/Views/VZ/_SearchResult.cshtml
+++ b/Web.Statu/Views/VZ/_SearchResult.cshtml
@@ -14,7 +14,7 @@
         <div class="col-xs-12">
             <div class="alert alert-danger">Položený dotaz má špatnou syntaxi. Zkontrolujte, že je správně.</div>
             <div>
-                Pokud si myslíte, že dotaz je v pořádku a chyba je na naší straně, @Util.FeedbackModal("napište nám prosím", "Chyba", "btn btn-link", null).
+                Pokud si myslíte, že dotaz je v pořádku a chyba je na naší straně, @WebUtil.FeedbackModal("napište nám prosím", "Chyba", "btn btn-link", null).
                 Zkontrolujeme to.
             </div>
         </div>
@@ -25,7 +25,7 @@ else
 {
     if (Model.ShowWatchdog && Model.Q != null)
     {
-        @Util.AddWatchDog(this.User, Model.Q, typeof(HlidacStatu.Lib.Data.VZ.VerejnaZakazka))
+        @WebUtil.AddWatchDog(this.User, Model.Q, typeof(HlidacStatu.Lib.Data.VZ.VerejnaZakazka))
     }
 
     if (Model.ElasticResults == null)
